compiler/tests/fixtures/invalid/semantics/query_multiple_time_of_day.viv
// Invalid: query with multiple time-of-day constraints

action fight:
    roles:
        @fighter:
            as: initiator

query bad-time:
    roles:
        @witness:
            as: character
    action:
        any: fight
    time:
        after: 8am
        before: 6pm
